lesson5/redmine-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redmine
  name: redmine
  namespace: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redmine
    spec:
      hostNetwork: true
      containers:
        - name: redmine
          image: redmine:4.1.1-alpine
          ports:
            - containerPort: 3000
              name: redmine
