lesson5/redmine-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine
  namespace: postgres
spec:
  selector:
    app: redmine
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
